[package]
name = "verify_signature"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"
rust-version = "1.56.1"

[dependencies]
ink_primitives = { version = "3.0.0", default-features = false }
ink_metadata = { version = "3.0.0", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3.0.0", default-features = false }
ink_storage = { version = "3.0.0", default-features = false }
ink_lang = { version = "3.0.0", default-features = false }

eth = { package="ink_eth_compatibility", version = "3.0.0" }
sp-core = { version = "6.0.0", default-features = false }
hex-literal = { version = "0.3" }

scale = { package = "parity-scale-codec", version = "3.1.2", default-features = false, features = ["derive"] }
scale-info = { version = "2.0.0", default-features = false, features = ["derive"], optional = true }

[lib]
name = "verify_signature"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
]

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "scale/std",
    "scale-info/std",
    "sp-core/std",
    "eth/std"
]
ink-as-dependency = []
